--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,19 +9,23 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.1.0",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "@types/react-native-onboarding-swiper": "^1.1.0",
     "axios": "^0.20.0",
     "expo": "^39.0.3",
     "expo-font": "~8.3.0",
     "expo-image-picker": "~9.1.0",
+    "expo-location": "~9.0.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-maps": "0.27.1",
+    "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
