--- a/web/package.json
+++ b/web/package.json
@@ -7,18 +7,19 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.67",
-    "@types/react": "^16.9.52",
+    "@types/node": "^12.12.68",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.20.0",
+    "framer-motion": "^2.9.1",
     "leaflet": "^1.7.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
