--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "start": "node dist/server.js",
+    "build": "tsc",
+    "dev": "tsnd --transpile-only --ignore-watch node_modules ./src/server.ts",
+    "typeorm": "tsnd ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +25,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "nodemailer-express-handlebars": "^4.0.0",
-    "sqlite3": "^5.0.0",
+    "pg": "^8.4.1",
     "typeorm": "^0.2.28",
     "yup": "^0.29.3"
   },
